2011-07-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.87 released.

        * Bug fix to new code from 07-05


2011-07-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.86 released.

        * Added code to complement FullAuto. New code works
          with FullAuto to enable user to select and save
          a default startup meny file.


2011-07-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.85 released.

        * Removed some overlooked error-checking code.


2011-07-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.84 released.

        * Added ability to revise banner with anonymous subs.


2011-06-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.83 released.

        * Fixes to navigation with recursive menus.


2011-06-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.82 released.

        * Fixed bug when using with FullAuto introduced with
          recent changes.


2011-06-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.81 released.

        * New ITEM LEVEL Select element. See POD documentation
          for details.

        * New Mark element. See POD documentation
          for details.


2011-05-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.80 released.

        * New recursive support added. See POD documentation
          for details.


2011-03-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.79 released.

        * Fixed issue when user moved back to parent menu
          and makes different selection than previously


2011-03-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.78 released.

        * Updated POD documentation to include new instructions
          on how to pass multiple selections to sub menus, and
          use anonymous subroutines or closures with macros to