@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 4fc22b3effb632d3d9a898c195d698656babf6dd ChangeLog
+SHA1 11209f083073226e8569019fb32ab6f5bd39c3d8 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 a6c3abbe61a5610b1e336b80eb5fdb7af6a4c20a META.yml
+SHA1 1737594191c335dd1ee58974a5f321d463b08f1e META.yml
 SHA1 14e358b68232b26478c491ba66290d4dc07ae02a Makefile.PL
 SHA1 dd0ef50a94b1bbe303b0f05c353dfe97cda04f3b README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,13 +31,13 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 7b6f9d71eeedbe89655c5b4c3461890be6770814 lib/Term/Menus.pm
+SHA1 ba584d114fb9b4ce9d8c0d4175611d4012094299 lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk4xyu8ACgkQdsVAdUjO9InaOQCbB7rkIXkxFCgjXpa73VtjelmS
-924AnjXArhZ5gA1yYdgd8LHwwxNKvRLM
-=G3Ag
+iEYEARECAAYFAk40AvAACgkQdsVAdUjO9IkNTQCfZjBcWt/hOd8D1MrKrPtCU7MA
+npAAoIWvVUlyOvGVVtNdmroIxDJ5AF2H
+=BD/h
 -----END PGP SIGNATURE-----
