@@ -1,3 +1,10 @@
+2011-07-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 1.88 released.
+
+        * Better handling of top script indicated menu_config.
+
+
 2011-07-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 1.87 released.
